@@ -34,6 +34,7 @@ Date: ????
     - Awaken display panels when you touch them
     - Only tick always show display panels when there is a player nearby
     - Do not tick the always show ones when blurred to remote view
+    - Disable `ticked_this_tick` debug
 ---------------------------------------------------------------------------------------------------
 Version: 0.0.1
 Date: 2024. 11. 13
